# redac

./: Makefile  Makefile.am  README.md  autogen.sh  config.h  configure  configure.ac  redac.desktop
datas/: note_intention.odt  presentation.odt  redac_flow_management.odg
icons/: blue_main_menu.xcf  blue_main_menu.xpm  camera.xpm  camera_light.xpm  clear_format.xpm  clear_format_light.xpm  find_and_replace.xcf  find_and_replace.xpm  grey_main_menu.xpm  hamburger.xpm  hamburger3.xpm  hamburger_light.xpm  highlight0.xpm  highlight_blue.xpm  pencil.xcf  quotation3.xpm  quotation_blue.xpm  scheduler.xpm  settings.xpm  settings.xpm~  settings1.xpm  settings2.xpm  settings4.xpm  settings_light.xpm  settings_light1.xpm  settings_quad.xpm  shutter.xcf  shutter.xpm  star_highlight.xpm  star_highlight1.xpm  strike.xpm  strike_light.xpm  subscript0.xpm  super_sub_base.odg  superscript0.xpm  superscript_light.xpm  surligneur.xcf  text-select1.xcf  text-select2.xcf  text-select3.xcf  (+9 more)
pixmaps/: Makefile  Makefile.am  Makefile.in
po/: LINGUAS  Makevars  POTFILES.in  fr.gmo  fr.mo  fr.po  fr.po~  fr_FR.mo  nl.mo  nl.po  redac  redac.pot
src/: Makefile.am  audio.c  audio.c~  audio.h  callbacks.c  callbacks.c~  callbacks.h  cursor.c  cursor.h  interface.c  interface.c~  interface.h  main.c  main.c~  misc.c  misc.c~  misc.h  mttexport.c  mttexport.c~  mttexport.h  mttfiles.c  mttfiles.c~  mttfiles.h  mttimport.c  mttimport.c~  mttimport.h  mttimport.h~  paving.c  paving.c~  paving.h  pdf.c  pdf.c~  pdf.h  redac.pot  search.c  search.c~  search.h  settings.c  settings.h  support.c  (+6 more)
src/icons/: Makefile.am  boxes.xpm  ellipse.xpm  highlight.xpm  lines.xpm  pdf.xpm  pencil.xpm  pencil_light.xpm  quotation.xpm  quotation.xpm~  quotation_light.xpm  star_highlight_light.xpm  subscript.xpm  subscript_light.xpm  superscript.xpm  superscript.xpm~  text_select.xpm  text_select_light.xpm
ui/: Makefile.am  main.ui  settings.ui
