EXTRA_DIST = \
	highlight.xpm \
	pdf.xpm \
	pencil.xpm \
	pencil_light.xpm \
	quotation.xpm \
	quotation_light.xpm \
	star_highlight.xpm \
	star_highlight_light.xpm \
	subscript.xpm \
	subscript_light.xpm \
	superscript.xpm \
	superscript_light.xpm \
	text_note.xpm \
	text_note_light.xpm \
	text_select.xpm \
	rectangular_highlighting-symbolic.svg \
	text_select_light.xpm

